==> pawelc06/STM32F103RB_Wav_Player/STM32F103RB_Wav_Player/FatFs_0.10/sd_stm32.c <==
#include "stm32f10x.h"
#include "src/diskio.h"
#define CMD0    (0x40+0)    /* GO_IDLE_STATE */
#define CMD1    (0x40+1)    /* SEND_OP_COND */
#define CMD8    (0x40+8)    /* SEND_IF_COND */
#define CMD9    (0x40+9)    /* SEND_CSD */
#define CMD10    (0x40+10)    /* SEND_CID */
#define CMD12    (0x40+12)    /* STOP_TRANSMISSION */
#define CMD16    (0x40+16)    /* SET_BLOCKLEN */
#define CMD17    (0x40+17)    /* READ_SINGLE_BLOCK */
#define CMD18    (0x40+18)    /* READ_MULTIPLE_BLOCK */
#define CMD23    (0x40+23)    /* SET_BLOCK_COUNT */
#define CMD24    (0x40+24)    /* WRITE_BLOCK */
#define CMD25    (0x40+25)    /* WRITE_MULTIPLE_BLOCK */
#define CMD41    (0x40+41)    /* SEND_OP_COND (ACMD) */
#define CMD55    (0x40+55)    /* APP_CMD */
#define CMD58    (0x40+58)    /* READ_OCR */

static
void SELECT (void) 		// CS w stan niski
{
	GPIO_ResetBits(GPIOA, GPIO_Pin_4);
}

static
void DESELECT (void) 	// CS w stan wysoki
{
	GPIO_SetBits(GPIOA, GPIO_Pin_4);
}

static
void xmit_spi (BYTE Data)  // Wyslanie bajtu do SD
{
  // Wyslanie bajtu
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
  SPI_I2S_SendData(SPI1, Data);
}

static
BYTE rcvr_spi (void) 		// Odebranie bajtu z SD
{
  u8 Data = 0;

  // Wyslanie 0xFF
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
  SPI_I2S_SendData(SPI1, 0xFF);

  // Odebranie bajtu
  while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
  Data = SPI_I2S_ReceiveData(SPI1);

  return Data;
}
